# src/routes.py
@@ -3,6 +3,7 @@ from src.resourse.actors import ActorListApi
 from src.resourse.aggregations import AggregationApi
 from src.resourse.auth import AuthRegister, AuthLogin
 from src.resourse.films import FilmListApi
+from src.resourse.populate_db import PopulateDB
 from src.resourse.smoke import Smoke
 from src.resourse.stuntmen import StuntmenApi
 
@@ -12,6 +13,7 @@ api.add_resource(AggregationApi, '/aggregation', strict_slashes=False)
 api.add_resource(FilmListApi, '/films', '/films/<uuid>',  strict_slashes=False)
 api.add_resource(ActorListApi, '/actors', '/actors/<uuid>', strict_slashes=False)
 api.add_resource(StuntmenApi, '/stuntmen', '/stuntmen/<uuid>', strict_slashes=False)
+api.add_resource(PopulateDB, '/populate_db', strict_slashes=False)
 
 api.add_resource(AuthRegister, '/register_it', strict_slashes=False)
 print("AuthRegister resource registered.")
